--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -7,6 +7,11 @@ p{
     text-align: center;
 }
 
+.container{
+margin-left: auto;
+margin-right: auto;
+}
+
 section{
    text-align: center;
    padding-top: 60px;
