added loader back

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
-<!-- @if(isLoading){
+@if(isLoading){
     <app-loader></app-loader>
 }
-@else{ -->
+@else{ 
 
 <app-nav></app-nav>
   <section class="bg-[#4C6085]" id="top">
@@ -31,4 +31,4 @@
 
 <app-projects></app-projects>
 <app-footer></app-footer>
-<!-- } -->
+ } 
