replaced href links on projects

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -19,7 +19,7 @@
             <h2 class="card-title">Travel Plan App</h2>
             <img src="../../../assets/travelLaptop.png" alt="">
              <div class="justify-end card-actions">
-              <a href="https://github.com/The-DigitalAcademy/mudau_travel" target="_blank"> <button class="btn bg-[#4C6085] text-[#f5f6fa] liquid">View</button></a>
+              <a href="https://67e39f3fb1781bc248df1fac--travellistplan.netlify.app/" target="_blank"> <button class="btn bg-[#4C6085] text-[#f5f6fa] liquid">View</button></a>
             </div>
           </div>
         </div>
@@ -28,7 +28,7 @@
             <h2 class="card-title">Portfolio</h2>
             <img src="../../../assets/laptop.png" alt="">
             <div class="justify-end card-actions">
-              <a href="https://github.com/JadeLuke/Portfolio" target="_blank"> <button class="btn bg-[#4C6085] text-[#f5f6fa] liquid">View</button></a>
+              <a href="https://jade-portfolio-three.vercel.app/" target="_blank"> <button class="btn bg-[#4C6085] text-[#f5f6fa] liquid">View</button></a>
             </div>
           </div>
         </div>
