changed href links on nav

--- a/src/app/UI/shared-ui/nav/nav.component.html
+++ b/src/app/UI/shared-ui/nav/nav.component.html
@@ -12,9 +12,9 @@
           <li>
             <a (click)="toProjects()">Projects</a>
             <ul class="p-2">
-              <li><a href="https://github.com/The-DigitalAcademy/mudau_travel" target="_blank">Travel Plan App</a></li>
+              <li><a href="https://67e39f3fb1781bc248df1fac--travellistplan.netlify.app/" target="_blank">Travel Plan App</a></li>
               <li><a href="https://github.com/The-DigitalAcademy/Epic_reads" target="_blank">Library App</a></li>
-              <li><a href="https://github.com/JadeLuke/Portfolio" target="_blank">Portfolio</a></li>
+              <li><a href="https://jadeluke-portfolio.vercel.app/" target="_blank">Portfolio</a></li>
             </ul>
           </li>
           <li><a (click)="toSkills()">Skills</a></li>
