--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -28,7 +28,7 @@
             <h2 class="card-title">Portfolio</h2>
             <img src="../../../assets/laptop.png" alt="">
             <div class="justify-end card-actions">
-              <a href="https://jade-portfolio-three.vercel.app/" target="_blank"> <button class="btn bg-[#4C6085] text-[#f5f6fa] liquid">View</button></a>
+              <a href="https://jadeluke-portfolio.vercel.app/" target="_blank"> <button class="btn bg-[#4C6085] text-[#f5f6fa] liquid">View</button></a>
             </div>
           </div>
         </div>
